# databricks-medallion

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  SPEC.md  databricks.yml  databricks.yml.tmpl  pyproject.toml
data/batch_1/: customers.csv  order_lines.csv  orders.csv  products.csv
data/batch_2/: customers.csv  order_lines.csv  orders.csv
resources/: dbt_job.yml  dlt_pipeline.yml  dpl_python_pipeline.yml  dpl_sql_pipeline.yml  mv_st_job.yml  notebooks_job.yml  schemas.yml  setup_job.yml  sql_job.yml  validate_job.yml
scripts/: generate_databricks_yml.py
setup/: upload_data.py
src/: validate.sql
src/dbt_project/: dbt_project.yml  profiles.yml
src/dbt_project/models/bronze/: _bronze_schema.yml  bronze_customers.sql  bronze_order_lines.sql  bronze_orders.sql  bronze_products.sql
src/dbt_project/models/gold/: _gold_schema.yml  gold_dim_customer.sql  gold_dim_date.sql  gold_dim_product.sql  gold_fact_order_line.sql
src/dbt_project/models/silver/: _silver_schema.yml  silver_customers.sql  silver_order_lines.sql  silver_orders.sql  silver_products.sql
src/dbt_project/snapshots/: snap_dim_customer.sql
src/dlt/: pipeline.sql
src/dpl_python/: pipeline.py
src/dpl_sql/: pipeline.sql
src/mv_st/: scd2_merge.sql  setup.sql
src/notebooks/: bronze.py  gold.py  silver.py
src/sql/: bronze.sql  gold.sql  silver.sql
